@@ -93,6 +93,8 @@ info.fail: '&6No team or player found under that name'
 info.score: '&6Score: &b{0}'
 info.money: '&6Balance: &b{0}'
 info.ally: '&6Allies: &b{0}'
+info.online: '&a'
+info.offline: '&c'
 kick.success: '&6That player has been kicked'
 kick.notify: '&6You have been kicked from team {0}'
 kick.title: '&4You have been kicked from your team'
